@@ -1,3 +1,6 @@
+23 March 2011: Wouter
+	- udbzone, store and read zone data in the random-access udb format.
+
 21 March 2011: Wouter
 	- udbradtree works. udb-inspect tool can print radtree details.
 
